# nyc-buildability

./: .gitattributes  .gitignore  CHANGELOG_V2.md  CHANGELOG_V3.md  CLAUDE.md  CONTINUE_FROM_CURRENT_STATE_PROMPT.md  GENERATIVE_DEVELOPMENT_STRATEGY_REQUIREMENTS.md  INTEGRATION_MANIFEST.json  PRD.md  README.md  README_ADD_TO_EXISTING_PROJECT.md  README_START_HERE.md  render.yaml
services/api/: .env.example  README.md  pyproject.toml  requirements-tools.in  requirements.in  requirements.txt
services/api/app/: __init__.py  config.py  main.py
services/api/app/_contract_schemas/: __init__.py
services/api/app/_contract_schemas/v1/: __init__.py  coverage_status.schema.json  property_profile.schema.json  rule_evaluation.schema.json  source_fact.schema.json
services/api/app/_zr_snapshots/: __init__.py
services/api/app/_zr_snapshots/v1/: __init__.py  zr-12-10.snapshot.json  zr-23-421.snapshot.json  zr-23-423.snapshot.json  zr-23-424.snapshot.json
services/api/app/api/: __init__.py
services/api/app/api/v1/: __init__.py  properties.py  rule_evaluation.py
services/api/app/connectors/: __init__.py  bbl.py  mappluto_geometry_arcgis.py  pluto_soda.py  zoning_features_arcgis.py  ztldb_soda.py
services/api/app/contracts/: __init__.py  serializers.py
services/api/app/profile/: __init__.py  builder.py  contract.py  wave_integration.py  zoning_crosscheck.py
services/api/app/resilience/: __init__.py  breaker.py  budget.py  cache.py  config.py  fetcher.py  metrics.py  retry.py  transport.py
services/api/app/rules/: __init__.py  coverage.py  dsl.py  evaluator.py  integration.py  lifecycle.py  models.py  operations.py  registry.py  response.py  snapshots.py  units.py
services/api/app/rules/rulesets/: r5_height.rule.json  r5_qrs_height.rule.json  r5_residential_far.rule.json  r5_setback.rule.json  r5a_height.rule.json  r5b_height.rule.json  r5d_height.rule.json
services/api/app/scenario/: __init__.py  builder.py  constants.py  contract.py  models.py
services/api/app/spatial/: __init__.py  adapter.py  coverage.py  crosscheck.py  engine.py  geometry.py  models.py  policy.py
services/api/scripts/: dependency_age_gate.py  exact_install_smoke.py  lock_requirements.sh  lock_tools.sh  sync_contract_schemas.py  sync_zr_snapshots.py
services/api/scripts/tests/: test_dependency_age_gate.py  test_lock_verify_reproducibility.py
services/api/tests/: test_health.py  test_security_middleware.py
services/api/tests/api/: test_contract_schema_packaging.py  test_properties_v1.py  test_property_contract.py  test_rule_evaluation_api.py
services/api/tests/connectors/: __init__.py  test_bbl.py  test_m2_t012_carried_defects.py  test_mappluto_geometry_arcgis.py  test_pluto_soda.py  test_zoning_features_arcgis.py  test_ztldb_soda.py
services/api/tests/contracts/: test_closed_contracts.py  test_contract_serializers.py  test_rule_evaluation_contract.py
services/api/tests/fixtures/dob_legacy/: README.md  catalog_dob_sweep_extract.json  query_3h2n-5cm9_bin1006014_positive.json  query_3h2n-5cm9_minmax_issue-date_garbage.json  query_3h2n-5cm9_with_ecb_number.json  query_6bgk-3dad_bin1006014_positive.json  query_6bgk-3dad_ecb_34254160K_join.json  query_855j-jady_bin1006014_dup-of-3h2n.json  query_855j-jady_device-type-groups.json  query_bs8b-p36w_minmax_co-issue-date_future-garbage.json  query_eabe-havv_bin1006014_positive.json  query_ic3t-wcy2_bbl-length-distribution.json  query_ic3t-wcy2_bin1006014_bbl-pollution.json  query_ic3t-wcy2_bin_1006014_select.json  query_ipu4-2q9a_bad-column_http400.json  query_ipu4-2q9a_bin1006014_positive.json  query_ipu4-2q9a_bin_1006014_select.json  query_ipu4-2q9a_minmax_issuance-date_mixed-formats.json  query_log_counts_and_ranges.txt  query_log_cross_channel_bin1006014.txt  query_log_key_probes.txt  response_headers_3h2n-5cm9_count.txt  sample_3h2n-5cm9.json  sample_6bgk-3dad.json  sample_6v9u-ndjg.json  sample_855j-jady.json  sample_bf97-mjsy.json  sample_bs8b-p36w.json  sample_bty7-2jhb.json  sample_eabe-havv.json  sample_g76y-dcqj.json  sample_i296-73x5.json  sample_ic3t-wcy2.json  sample_ipu4-2q9a.json  sample_iz2q-9x8d.json  sample_ndq3-kuef.json  sample_nyis-y4yr.json  sample_t8hj-ruu2.json  views_metadata_extract_17_datasets.json
services/api/tests/fixtures/mappluto_geometry/: MANIFEST.json  MPG01_meta.json  MPG02_lot_single_1008350041.json  MPG03_lot_nofeature_5999999999.json  MPG04_lot_condo_billing_1000157501.json  MPG05_lot_condo_unit_1000151001.json  MPG06_lot_holes_1000010010.json  MPG07_lot_multipolygon_4142600001.json  MPG100_malformed_missing_features_synthetic.json  MPG101_malformed_truncated_synthetic.json  MPG102_arcgis_error_http200_synthetic.json  MPG103_rate_limited_429_synthetic.json  MPG80_geom_self_intersection_synthetic.json  MPG81_geom_unclosed_ring_synthetic.json  MPG82_geom_duplicate_vertices_synthetic.json  (+17 more)
services/api/tests/profile/: test_data_semantics.py  test_wave_integration.py  test_ztldb_crosscheck.py
services/api/tests/resilience/: helpers.py  test_backoff.py  test_breaker.py  test_budget.py  test_cache.py  test_idempotency.py  test_lkg.py  test_metrics_and_config.py  test_retry_after.py  test_route_wiring.py  test_staleness.py  test_transport_shared.py
services/api/tests/rules/: test_decimal_legal_arithmetic.py  test_installed_deployability.py  test_r5_height_setback.py  test_rules_engine.py  test_rules_engine_hardening.py  test_rules_fh4_temporal_parity.py  test_rules_fh_safeguards.py  test_rules_integration.py  test_units_exact.py  test_zr_snapshot_bundle.py
services/api/tests/scenario/: _support.py  test_scenario_contract.py  test_scenario_foundation.py
services/api/tests/spatial/: test_spatial_intersection.py
(+1182 files in other folders)
