[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-buildability-api"
version = "0.1.0"
description = "FastAPI service for the NYC Development Feasibility & Zoning Intelligence Platform (M0 placeholder)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "httpx>=0.27,<1",
    "ruff>=0.6,<1",
    # M1-T002: connector tests validate emitted facts against the canonical
    # source_fact v1 contract (same engine .github/scripts/validate_contracts.py
    # uses when available). Test-only; the connector itself is stdlib-only.
    "jsonschema>=4.21,<5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
