[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-buildability-api"
version = "0.1.0"
description = "FastAPI service for the NYC Development Feasibility & Zoning Intelligence Platform (M0 placeholder)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    # M2-T003 rework: the property API validates every built profile against
    # the canonical schema at REQUEST time (app/profile/contract.py
    # validate_profile). jsonschema is therefore a RUNTIME dependency, not a
    # dev-only extra. The web-e2e job and every production image install
    # without dev extras, so the first validated request would have failed on
    # a missing import had this stayed under [dev].
    "jsonschema>=4.21,<5",
    # M2-T009: runtime geometry library for the MapPLUTO per-BBL geometry
    # connector (app/connectors/mappluto_geometry_arcgis.py). Pinned EXACT
    # (owner packet directive) rather than as a range because the
    # connector's deterministic geometry digests and make_valid repair
    # behavior are GEOS-build-dependent (the 2.0.7 wheels bundle GEOS
    # 3.11.4 on every platform); a range here could silently change digest
    # output between installs. The test suite asserts shapely.__version__
    # and shapely.geos_version_string. Re-pin only deliberately (dedicated
    # commit, re-anchored digests, CI green).
    "shapely==2.0.7",
]

[project.optional-dependencies]
dev = [
    # M0-T020: pytest floored at 9.0.3 to admit the advisory-free fix for
    # CVE-2025-71176 / PYSEC-2026-1845 (the <9 cap held 8.x); the tooling lock
    # (services/api/requirements-tools.lock) hash-pins pytest==9.0.3 exactly and
    # every audited CI job installs pytest from that lock, not from this range.
    "pytest>=9.0.3,<10",
    "httpx>=0.27,<1",
    "ruff>=0.6,<1",
    # jsonschema is now a runtime dependency (see [project].dependencies); the
    # connector/contract tests use the same engine at test time.
]

[tool.setuptools.packages.find]
include = ["app*"]

# M2-T003 rework: ship the runtime-bundled contract schemas (build artifacts
# kept byte-identical to packages/contracts/schemas/v1 by
# services/api/scripts/sync_contract_schemas.py) as PACKAGE DATA so
# `pip install ./services/api` includes them. Without this the installed app
# would not carry app/_contract_schemas/v1/*.schema.json and contract.py would
# fail to load the canonical schema at import.
[tool.setuptools.package-data]
"app._contract_schemas.v1" = ["*.schema.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
